--- a/stack.yml
+++ b/stack.yml
@@ -4,8 +4,8 @@ services:
       image: mongo
       restart: always
       environment:
-         MONGO_INITDB_ROOT_USERNAME: cytech
-         MONGO_INITDB_ROOT_PASSWORD: Cytech
+         MONGO_INITDB_ROOT_USERNAME:
+         MONGO_INITDB_ROOT_PASSWORD:
       ports:
          - 27017:27017
       volumes:
